bugfix for adv searches results criteria wrapping

--- a/src/styles/components/_results.scss
+++ b/src/styles/components/_results.scss
@@ -92,6 +92,7 @@
 
     .button {
       margin-bottom: rem(10px);
+      white-space: normal; //for really long Adv searches
     }
     
     .container {
